--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
-.navigation {
+nav {
     display: flex;
+    justify-content: space-around;
+    background-color: blanchedalmond;
+
+}
+.heroBanner {
+    display:flex;
+    width:100%;
 }
