--- a/index.css
+++ b/index.css
@@ -1,10 +1,19 @@
-nav {
+nav{
     display: flex;
     justify-content: space-around;
     background-color: blanchedalmond;
-
 }
-.heroBanner {
-    display:flex;
+
+.heroImage{
+    background: url(https://upload.wikimedia.org/wikipedia/commons/7/78/Empanadas_argentinas_2017.jpg);
     width:100%;
+    height:70vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.heroText{
+    text-align: center;
 }
