--- a/index.css
+++ b/index.css
@@ -4,16 +4,19 @@ nav{
     background-color: blanchedalmond;
 }
 
-.heroImage{
+.heroBanner{
     background: url(https://upload.wikimedia.org/wikipedia/commons/7/78/Empanadas_argentinas_2017.jpg);
     width:100%;
     height:70vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    position: absolute;
 }
 
 .heroText{
     text-align: center;
+    margin-top: 200px;
+    font-size: 3em;
+    color: white;
 }
