--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    border: 2px solid black;
 }
 
 nav{
@@ -30,22 +31,15 @@ nav{
     color: white;
 }
 
-.aboutSection{
-    display: flex;
-    flex-wrap: wrap;
-    width:100%;
-    height:auto;
-}
-
 .momImg{
-    margin-top:500px;
-    width: 75%;
-    height: 70vh;
-}
+    margin-top:700px;
+    /*width: 30%;
+    height: 50vh;
+}*/
 
 .aboutTextContainer{
-    width:50%;
-    height: 70vh;
+    width:40%;
+    height: 50vh;
     text-align: center;
-    margin-left: 300px;
+    border: 4px solid red;
 }
