--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 *{
     box-sizing: border-box;
-    border: 2px solid black;
+    /*border: 2px solid black;*/
 }
 
 nav{
@@ -31,15 +31,34 @@ nav{
     color: white;
 }
 
-.momImg{
-    margin-top:700px;
-    /*width: 30%;
+.aboutSection{
+    display:flex;
+    flex-wrap:nowrap;
+    background-color: blanchedalmond;
+}
+
+.aboutImageContainer{
+    margin-top:750px;
+    width: 50%;
     height: 50vh;
-}*/
+    border: 4px solid blanchedalmond;
+}
+
+.momImg {
+    width:70%;
+    height:auto;
+    margin-left:100px;
+    margin-top:10px;
+}
 
 .aboutTextContainer{
-    width:40%;
+    margin-top:750px;
+    width:50%;
     height: 50vh;
     text-align: center;
-    border: 4px solid red;
+    border: 4px solid blanchedalmond;
+}
+
+.actualAboutText{
+    margin-top:100px;
 }
