--- a/index.css
+++ b/index.css
@@ -6,16 +6,17 @@
 nav{
     display: flex;
     justify-content: space-around;
-    background-color: white;
+    background-color: #523523;
     font-size: 1.5em;
     width:100%;
     height: 15vh;
     align-content: center;
+    color:whitesmoke;
 }
 
 .heroBanner{
     background: url(https://upload.wikimedia.org/wikipedia/commons/7/78/Empanadas_argentinas_2017.jpg);
-    width:100%;
+    width:1424px;
     max-width:100%;
     height:90vh;
     background-position: center;
@@ -28,17 +29,18 @@ nav{
     text-align: center;
     margin-top: 260px;
     font-size: 3em;
-    color: white;
+    color: whitesmoke;
+    mix-blend-mode: exclusion;
 }
 
 .aboutSection{
     display:flex;
     flex-wrap:nowrap;
-    background-color: white;
+    background-color: whitesmoke;
 }
 
 .aboutImageContainer{
-    margin-top:750px;
+    margin-top:700px;
     width: 50%;
     height: 50vh;
     /*border: 4px solid black;*/
@@ -47,11 +49,12 @@ nav{
 .momImg {
     width:70%;
     height:50vh;
-    margin-left:100px;
+    margin-left:150px;
+    /*padding: 40px #6e6b69;*/
 }
 
 .aboutTextContainer{
-    margin-top:750px;
+    margin-top:700px;
     width:50%;
     height: 50vh;
     text-align: center;
@@ -59,12 +62,20 @@ nav{
 }
 
 .actualAboutText{
-    margin-top:50px;
+    margin-top:40px;
     margin-left:200px;
     width:12em;
     height:auto;
 }
 
+.menuSection{
+    margin-top:800px;
+    border:2px solid red;
+}
+
 .footer{
-    background-color:blanchedalmond;
+    display:flex;
+    justify-content:center;
+    background-color:#5e3e2a;
+    color:whitesmoke;
 }
