--- a/index.css
+++ b/index.css
@@ -7,9 +7,9 @@ nav{
     display: flex;
     justify-content: space-around;
     background-color: #523523;
-    font-size: 1.5em;
+    font-size: 1.2em;
     width:100%;
-    height: 15vh;
+    height: 10vh;
     align-content: center;
     color:whitesmoke;
 }
@@ -18,19 +18,41 @@ nav{
     background: url(https://upload.wikimedia.org/wikipedia/commons/7/78/Empanadas_argentinas_2017.jpg);
     width:1424px;
     max-width:100%;
-    height:90vh;
+    height:50vh;
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
     position: absolute;
 }
 
 .heroText{
     text-align: center;
-    margin-top: 260px;
+    margin-top: 18vh;
     font-size: 3em;
     color: whitesmoke;
     mix-blend-mode: exclusion;
+}
+
+.menuSection{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align:center;
+    margin-top:50vh;
+    border:2px solid red;
+}
+
+.menuTitleContainer{
+    justify-content: center;
+    font-size: 2em;
+}
+
+.menuItemContainer{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-evenly;
+    
 }
 
 .aboutSection{
@@ -66,11 +88,6 @@ nav{
     margin-left:200px;
     width:12em;
     height:auto;
-}
-
-.menuSection{
-    margin-top:800px;
-    border:2px solid red;
 }
 
 .footer{
