--- a/index.css
+++ b/index.css
@@ -41,6 +41,7 @@ nav{
     text-align:center;
     margin-top:50vh;
     border:2px solid red;
+    height:100vh;
 }
 
 .menuTitleContainer{
@@ -51,7 +52,8 @@ nav{
 .menuItemContainer{
     display:flex;
     flex-direction:row;
-    justify-content:space-evenly;
+    flex-wrap:wrap;
+    justify-content:space-around;
     
 }
 
@@ -62,7 +64,6 @@ nav{
 }
 
 .aboutImageContainer{
-    margin-top:700px;
     width: 50%;
     height: 50vh;
     /*border: 4px solid black;*/
@@ -76,7 +77,7 @@ nav{
 }
 
 .aboutTextContainer{
-    margin-top:700px;
+    margin-top:0vh;
     width:50%;
     height: 50vh;
     text-align: center;
